--- a/TickerWpf/App.xaml
+++ b/TickerWpf/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="TickerWpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TickerWpf"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TickerWpf">
     <Application.Resources>
          
     </Application.Resources>
