--- a/TickerWpf/TickerHistory.xaml
+++ b/TickerWpf/TickerHistory.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="TickerHistory" Height="450" Width="800">
     <Grid>
-        <ListView x:Name="lstTickerHistory">
+        <ListView x:Name="lstTickerHistory" ItemsSource="{Binding TickerHistory}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
